Update README to emphasize Java 23 requirement and troubleshooting